django-sitegate changelog
=========================


v1.3.2 [2021-11-03]
-------------------
* Remote auth. Signup now fires signals.


v1.3.1 [2021-10-12]
-------------------
* 'register_remotes' and decorators are now exposed in toolbox.
* Remote auth form now use POST.


v1.3.0 [2021-10-10]
-------------------
+ Added experimental support for sign in using remote services, e.g. Yandex, Google.


v1.2.1 [2020-10-31]
-------------------
* Fixed deprecation warnings.


v1.2.0 [2020-05-29]
-------------------
! Dropped support for Django<2.0.
! Dropped support for Python 2 and 3.5.


v1.1.0 [2019-12-07]
-------------------
! Dropped QA for Django 1.7.
! Dropped QA for Python 2.
+ Add Django 3.0 compatibility.


v1.0.0
------
! Dropped QA for Python 3.4.
* No functional changes. Celebrating 1.0.0.


v0.14.1
-------
* Fixed siteprefs dependency version.


v0.14.0
-------
+ Added SITEGATE_USE_SITEMESSAGE and SITEGATE_USE_SITEPREFS settings.
* Disabling flow now disables form POST alngside with form rendering.
* Now a proper version of siteprefs is preinstalled.


v0.13.0
-------
+ Added Bootstrap 4 templates.
+ Django 2.0 basic compatibility.
* Dropped support for Python<3.4 and Django<1.7.


v0.12.2
-------
* Django 1.11 compatibility improvements.


v0.12.1
-------
* Package distribution fix.


v0.12.0
-------
+ Added `repo` module with known anonymous mailer hosts.
* ModernSignup: maximum e-mail length is limited to maximum username length (see #2).


v0.11.0
-------
* Django 1.10 compatibility improvements.


v0.10.3
-------
* Fixed "Your models have changes that are not yet reflected in a migration" (see #19).
* Django 1.9 compatibility improvements.


v0.10.2
-------
* Fixed FieldError for custom user models without `username` field.


v0.10.1
-------
* Fixed `KeyError` on signup when username already exists.


v0.10.0
-------
+ Added Czech localization.
+ Added Django 1.7 migrations.


v0.9.0
------
+ Django 1.7 ready.